--- a/index.html
+++ b/index.html
@@ -93,20 +93,21 @@
         <div class="contents">
           <div class="skill-contents">
             <h1>コーディング</h1>
-            <p class="sub">CODING</p>
-            <i class="fas fa-laptop-code fa-4x"></i>
+            <p class="sub">DESIGN</p>
+            <i class="fas fa-pencil-alt fa-4x"></i>
             <div class="skill-text">
-              <p>HTML/CSSをベースに、Webサイトを作成します。 デザイン・文章などのご要望をヒアリングしながら、忠実にコーディング致します。
-              また、PCサイトだけでなく、スマートフォンなど、ご希望のデバイスに合わせたレスポンシブデザインも可能です。</p>
+              <p>ヒアリングに基づいたプランに沿って、デザインを作成いたします。人の使うものであることを常に意識して、使う人が迷わない、
+                目的を達成できるデザインを心がけ、そのプランに最適な提案をさせていただきます。</p>
             </div>
           </div>
 
           <div class="skill-contents">
             <h1>デザイン</h1>
-            <p class="sub">DESIGN</p>
+            <p class="sub">CODING</p>
             <i class="fas fa-laptop-code fa-4x"></i>
             <div class="skill-text">
-              <p>ヒアリングに基づいたプランに沿って、デザインを作成いたします。人の使うものであることを常に意識して、使う人が迷わない、目的を達成できるデザインを心がけています。インターフェースの重要性が増す中でデザインの役割を理解し、そのプランに最適な提案をさせていただきます。</p>
+              <p>HTML/CSSをベースに、Webサイトを作成します。 デザイン・文章などのご要望をヒアリングしながら、忠実にコーディング致します。
+              また、PCサイトだけでなく、スマートフォンなど、ご希望のデバイスに合わせたレスポンシブデザインも可能です。</p>
             </div>
           </div>
         </div>
