--- a/fashion/usedshop.html
+++ b/fashion/usedshop.html
@@ -34,7 +34,7 @@
      <dt>2020/3/10</dt>
      <dd>リニューアルオープンしました。</dd>
      <dt>2020/4/1</dt>
-     <dd>歯がない仲間が増えました。</dd>
+     <dd>新しいスタッフの紹介</dd>
      <dt>2018/4/20</dt>
      <dd>ゴールデンウィークは休まず営業いたします</dd>
      <dt>2020/6/20</dt>
