--- a/index.html
+++ b/index.html
@@ -1,187 +1,93 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <link rel="stylesheet" href="stylesheet.css">
-    <link rel="stylesheet" href="responsive.css">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="utf-8">
-    <title>ポートフォリオ</title>
-    <script src="https://kit.fontawesome.com/fb8f424287.js" crossorigin="anonymous">
-    </script>
-  </head>
-  <body>
-
-
-    <div class="container">
-      <!-- ----------------------- -->
-      <header>
-        <div class="header">
-
-          <div class="header-menu">
-              <div class="header-left">
-                <h1>Subaru Nakajima</h1>
-              </div>
-
-              <div class="header-right">
-                <a href="https://www.instagram.com/subaru.__.17"><i class="fab fa-instagram fa-2x"></i></a>
-                <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
-                <a href="https://www.act-blog.site/"><i class="fas fa-blog fa-2x"></i></a>
-              </div>
-          </div>
-
-          <div class="nav">
-            <ul class="nav-list">
-              <li><a href="#about">about</a></li>
-              <li><a href="#skills">skills</a></li>
-              <li><a href="#works">works</a></li>
-              <li><a href="#blog">blog</a></li>
-              <li><a href="#contact">contact</a></li>
-            </ul>
-          </div>
-
-          <div class="table">
-            <table width="100%">
-              <tr>
-                <td><a href="#about">about</a></td>
-                <td><a href="#skills">skills</a></td>
-                <td><a href="#works">works</a></td>
-              </tr>
-
-              <tr>
-                <td><a href="#blog">blog</a></td>
-                <td><a href="#contact">contact</a></td>
-              </tr>
-
-            </table>
-          </div>
-
-        </div>
-      </header>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="descripition" content="CSS Cafeの公式ウェブサイトです。商品情報、店舗情報、アクセス、会社情報など">
+  <title>Act　Cafe</title>
+  <link rel="stylesheet" href="html5reset-1.6.1.css">
+  <link rel="stylesheet" href="base.css">
+</head>
+<body id="home">
+<!-- header begin -->
+  <header id="top">
+    <div class="header_content wrapper">
+    <h1> <img class="header_logo" src="actcafe.images/logo.png" alt="ActCafe"></h1>
+      <nav>
+        <ul>
+          <li class="current"> <a href="usedshop.html">Home</a></li>
+          <li> <a href="#"> Menu</a></li>
+          <li> <a href="#">Access</a> </li>
+        </ul>
+      </nav>
     </div>
-      <!-- ----------------------- -->
-      <div class="top-wrapper">
-        <img class="mainimg" src="images/topphoto2.JPEG" alt="">
-        <img class="mainimg2" src="images/topphoto779.png" alt="">
-      </div>
+    <div id="main_image"></div>
+  </header>
+  <!-- header end -->
+  <!-- contents begin -->
+  <div class="contents wrapper">
+  <!-- main begin -->
+  <main id="main_content">
+    <section id="info">
+   <h2> お知らせ </h2>
+   <dl>
+     <dt>2020/3/10</dt>
+     <dd>リニューアルオープンしました。</dd>
+     <dt>2020/4/15</dt>
+     <dd>4/27(金)は設備メンテナンスのため休業いたします。</dd>
+     <dt>2018/4/20</dt>
+     <dd>ゴールデンウィークは休まず営業いたします。</dd>
+     <dt>2020/6/20</dt>
+     <dd>こだわりのパンに合わせたスペシャルデザートが登場！</dd>
+     <dt>2020/7/10</dt>
+     <dd>営業時間の一部変更について</dd>
+   </dl>
+  </section>
 
-    <div class="about-wrapper">
-      <div class="container">
+  <section id="campaign">
+ <h2> キャンペーン情報 </h2>
+ <ul>
+   <li>日頃の感謝を込めて、パスタ全品がいつもよりお得に！</li>
+   <li>平日11時から14時までお得なランチタイムを実施中。</li>
+   <li>バイオリン演奏付きのスペシャルディナーイベントの早期予約受付中。</li>
+   <li>夏限定のスペシャルフルーツデザートを楽しもう！</li>
+ </ul>
+  </section>
+</main>
+<!-- main end -->
+<!-- sidebar bigin -->
+<aside id="sidebar">
+  <ul>
+    <li>
+      <a href="#">
+        <img src="actcafe.images/banner01.png" alt="">
+      </a>
+    </li>
+    <li>
+      <a href="#">
+        <img src="actcafe.images/banner02.png" alt="">
+      </a>
+    </li>
+  </ul>
 
-          <h1 class="main-logo" id="about">about</h1>
+</aside>
+<!-- sidebar end -->
+ </div>
+ <!-- contents end -->
+ <!-- footer begin -->
+<footer>
+  <ul>
+    <li> <a href="#">ホーム</a></li>
+    <li> <a href="#"> 商品情報</a></li>
+    <li> <a href="#"> 店舗紹介</a></li>
+    <li> <a href="#">アクセス</a> </li>
+    <li> <a href="#"> スタッフ紹介</a></li>
+    <li> <a href="#"> お問い合わせ</a></li>
+  </ul>
 
-            <div class="contents">
-              <div class="myphoto">
-                <img src="images/myphoto.png" alt="">
-              </div>
-              <div class="about-text">
-                <p class="name">仲島　流星　　Nakajima　Subaru</p>
-                <p><i class="fab fa-instagram fa-1.6x"></i>Insagram : <a href="https://www.instagram.com/subaru.__.17">@subaru.__.17</a><br>
-                <i class="fab fa-twitter fa-1.6x"></i>Twitter : <a href="https://twitter.com/home">@act_blog</a><br>
-              <i class="fas fa-blog fa-1.6x"></i>blog : <a href=""https://www.act-blog.site/"">act_blog</a></p>
+ <small>&copy; 2020 Act　Cafe</small>
+</footer>
+ <!-- footer end -->
 
-                <p class="main-text">岐阜県出身。大学/大学院と理工学部で物理学を学んだ後、テレビ局へ入社。ディレクター・記者を経て、現在は営業職。
-                webでの知識を身につけるべく、web制作を学び始めました。"物作り"を通して人に喜んでもらうこと、、お役に立てることを目指しています。</p>
-              </div>
-            </div>
-      </div>
-    </div>
-
-    <div class="skill-wrapper">
-      <div class="container">
-        <h1 class="main-logo js-scrollAnimation" id="skills">skills</h1>
-
-        <div class="contents">
-          <div class="skill-contents">
-            <h1>デザイン</h1>
-            <p class="sub">DESIGN</p>
-            <i class="fas fa-pencil-alt fa-4x"></i>
-            <div class="skill-text">
-              <p>ヒアリングに基づいたプランに沿って、デザインを作成いたします。人の使うものであることを常に意識して、使う人が迷わない、目的を達成できるデザインを心がけ
-                、そのプランに最適な提案をさせていただきます。</p>
-            </div>
-          </div>
-
-          <div class="skill-contents">
-            <h1>コーディング</h1>
-            <p class="sub">CODING</p>
-            <i class="fas fa-laptop-code fa-4x"></i>
-            <div class="skill-text">
-              <p>HTML/CSSをベースに、Webサイトを作成します。 デザイン・文章などのご要望をヒアリングしながら、忠実にコーディング致します。
-              また、PCサイトだけでなく、スマートフォンなど、ご希望のデバイスに合わせたレスポンシブデザインも可能です。</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="work-wrapper">
-      <div class="container">
-        <h1 class="main-logo" id="works">works</h1>
-        <p>過去の制作物をご覧ください。</p>
-
-        <div class="work-contents">
-          <a href="actcafe/index.html"><img src="images/jeep-6.jpeg" alt=""></a>
-          <a href="netshop/index.html"><img src="images/jeep-7.jpeg" alt=""></a>
-          <a href="#"><img src="images/jeep-8.jpeg" alt=""></a>
-          <a href="#"><img src="images/jeep-9.jpeg" alt=""></a>
-          <a href="#"><img src="images/jeep-2.jpeg" alt=""></a>
-          <a href="#"><img src="images/jeep-14.jpeg" alt=""></a>
-        </div>
-      </div>
-    </div>
-
-    <div class="blog-wrapper">
-      <div class="container">
-        <h1 class="main-logo" id="blog">blog</h1>
-        <p>アウトドアについてブログを書いてますので、 <br> ご覧ください。</p>
-
-        <div class="blog-menu">
-          <a href="https://www.act-blog.site/"><i class="fas fa-blog fa-5x"></i></a>
-        </div>
-      </div>
-    </div>
-
-    <div class="contact-wrapper">
-      <div class="container">
-        <h1 class="main-logo" id="contact">contact</h1>
-        <p>お問い合わせは各種SNSまでお願いします。</p>
-
-        <div class="contact-menu">
-          <a href="https://www.instagram.com/subaru.__.17"><i class="fab fa-instagram fa-5x"></i></a>
-          <a href="https://twitter.com/home"><i class="fab fa-twitter fa-5x"></i></a>
-        </div>
-      </div>
-    </div>
-
-    <footer>
-        <div class="nav">
-          <ul class="nav-list">
-            <li><a href="#about">about</a></li>
-            <li><a href="#skills">skills</a></li>
-            <li><a href="#works">works</a></li>
-            <li><a href="#blog">blog</a></li>
-            <li><a href="#contact">contact</a></li>
-          </ul>
-        </div>
-
-        <div class="table2">
-          <table width="100%">
-            <tr>
-              <td><a href="#about">about</a></td>
-              <td><a href="#skills">skills</a></td>
-              <td><a href="#works">works</a></td>
-            </tr>
-
-            <tr>
-              <td><a href="#blog">blog</a></td>
-              <td><a href="#contact">contact</a></td>
-            </tr>
-
-          </table>
-        </div>
-
-
-    </footer>
-
-  </body>
+</body>
 </html>
