インスタのアカウント変更

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <p>お問い合わせは各種SNSまでお願いします。</p>
 
         <div class="contact-menu">
-          <a href="https://www.instagram.com/subaru.__.17"><i class="fab fa-instagram fa-5x"></i></a>
+          <a href="https://www.instagram.com/act._.blog/"><i class="fab fa-instagram fa-5x"></i></a>
           <a href="https://twitter.com/home"><i class="fab fa-twitter fa-5x"></i></a>
         </div>
       </div>
