--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
         <p>過去の制作物をご覧ください。</p>
 
         <div class="work-contents">
-          <a href="netshop/index.html"><img src="images/netshop.png" alt="カフェ"></a>
-          <a href="actcafe/index.html"><img src="images/actcafe.png" alt="ネットショップ"></a>
+          <a href="netshop/index.html"><img src="images/netshop.png" alt="ネットショップ"></a>
+          <a href="actcafe/index.html"><img src="images/actcafe.png" alt="アクトカフェ"></a>
           <a href="#"><img src="images/jeep-8.jpeg" alt=""></a>
           <a href="#"><img src="images/jeep-9.jpeg" alt=""></a>
           <a href="#"><img src="images/jeep-2.jpeg" alt=""></a>
