インスタのユーザーネーム変更

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               </div>
 
               <div class="header-right">
-                <a href="https://z-p15.www.instagram.com/act._.blog/"><i class="fab fa-instagram fa-2x"></i></a>
+                <a href="https://z-p15.www.instagram.com/act._.web/"><i class="fab fa-instagram fa-2x"></i></a>
                 <a href="https://twitter.com/act_blog"><i class="fab fa-twitter fa-2x"></i></a>
                 <a href="https://www.act-blog.site/"><i class="fas fa-blog fa-2x"></i></a>
               </div>
@@ -75,7 +75,7 @@
               </div>
               <div class="about-text">
                 <p class="name">仲島　流星　　Nakajima　Subaru</p>
-                <p><i class="fab fa-instagram fa-1.6x"></i>Insagram : <a href="https://z-p15.www.instagram.com/act._.blog/">@subaru.__.17</a><br>
+                <p><i class="fab fa-instagram fa-1.6x"></i>Insagram : <a href="https://z-p15.www.instagram.com/act._.web/">@subaru.__.17</a><br>
                 <i class="fab fa-twitter fa-1.6x"></i>Twitter : <a href="https://twitter.com/act_blog">@act_blog</a><br>
               <i class="fas fa-blog fa-1.6x"></i>blog : <a href="https://www.act-blog.site/"">act_blog</a></p>
 
@@ -147,7 +147,7 @@
         <p>お問い合わせは各種SNSまでお願いします。</p>
 
         <div class="contact-menu">
-          <a href="https://z-p15.www.instagram.com/act._.blog/"><i class="fab fa-instagram fa-5x"></i></a>
+          <a href="https://z-p15.www.instagram.com/act._.web/"><i class="fab fa-instagram fa-5x"></i></a>
           <a href="https://twitter.com/home"><i class="fab fa-twitter fa-5x"></i></a>
         </div>
       </div>
