--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               </div>
               <div class="about-text">
                 <p class="name">仲島　流星　　Nakajima　Subaru</p>
-                <p><i class="fab fa-instagram fa-1.6x"></i>Insagram : <a href="https://z-p15.www.instagram.com/act._.web/">@subaru.__.17</a><br>
+                <p><i class="fab fa-instagram fa-1.6x"></i>Insagram : <a href="https://z-p15.www.instagram.com/act._.web/">@act._.web</a><br>
                 <i class="fab fa-twitter fa-1.6x"></i>Twitter : <a href="https://twitter.com/act_blog">@act_blog</a><br>
               <i class="fas fa-blog fa-1.6x"></i>blog : <a href="https://www.act-blog.site/"">act_blog</a></p>
 
