自己紹介文の編集

--- a/index.html
+++ b/index.html
@@ -79,8 +79,11 @@
                 <i class="fab fa-twitter fa-1.6x"></i>Twitter : <a href="https://twitter.com/act_blog">@act_blog</a><br>
               <i class="fas fa-blog fa-1.6x"></i>blog : <a href="https://www.act-blog.site/"">act_blog</a></p>
 
-                <p class="main-text">岐阜県出身。将来の最終目標は、キャンプをしながら、仕事をすることです。
-                webでの知識を身につけるべく、web制作を学び始めました。"物作り"を通して人に喜んでもらうこと、、お役に立てることを目指しています。</p>
+                <p class="main-text"> 2001年　岐阜生まれ岐阜育ちの20歳です。時間、場所に囚われない働き方を見つけるため、web制作について学び始めました。
+                現在はフリーランスとして、主に企業系のHPのトップページや、LPなどの制作を行っております。詳しくはskillsをご覧ください。</p>
+                <p class="main-text2">"ものづくり"を通して『人に喜んでいただくこと』『笑顔になっていただくこと』をモットーに活動しております。</p>
+                <p class="main-text2">田舎で育ったので、アウトドアが好きで、キャンプをしながら仕事をする夢のような目標を掲げています！
+                人との繋がりを大切にしたいので、お仕事の話にとどまらず、趣味などのお話など、沢山お待ちしておりますので、お気軽にご連絡ください！！</p>
               </div>
             </div>
       </div>
