--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
               <div class="header-right">
                 <a href="https://z-p15.www.instagram.com/act._.web/"><i class="fab fa-instagram fa-2x"></i></a>
-                <a href="https://twitter.com/act_blog"><i class="fab fa-twitter fa-2x"></i></a>
+<!--                 <a href="https://twitter.com/act_blog"><i class="fab fa-twitter fa-2x"></i></a> -->
                 <a href="https://www.act-blog.site/"><i class="fas fa-blog fa-2x"></i></a>
               </div>
           </div>
@@ -76,7 +76,7 @@
               <div class="about-text">
                 <p class="name">仲島　流星　　Nakajima　Subaru</p>
                 <p><i class="fab fa-instagram fa-1.6x"></i>Insagram : <a href="https://z-p15.www.instagram.com/act._.web/">@act._.web</a><br>
-                <i class="fab fa-twitter fa-1.6x"></i>Twitter : <a href="https://twitter.com/act_blog">@act_blog</a><br>
+<!--                 <i class="fab fa-twitter fa-1.6x"></i>Twitter : <a href="https://twitter.com/act_blog">@act_blog</a><br> -->
               <i class="fas fa-blog fa-1.6x"></i>blog : <a href="https://www.act-blog.site/"">act_blog</a></p>
 
                 <p class="main-text"> 2001年　岐阜生まれ岐阜育ちの20歳です。時間、場所に囚われない働き方を見つけるため、web制作について学び始めました。
@@ -151,7 +151,7 @@
 
         <div class="contact-menu">
           <a href="https://z-p15.www.instagram.com/act._.web/"><i class="fab fa-instagram fa-5x"></i></a>
-          <a href="https://twitter.com/home"><i class="fab fa-twitter fa-5x"></i></a>
+<!--           <a href="https://twitter.com/home"><i class="fab fa-twitter fa-5x"></i></a> -->
         </div>
       </div>
     </div>
