--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
               </div>
 
               <div class="header-right">
-                <a href="https://z-p15.www.instagram.com/act._.web/"><i class="fab fa-instagram fa-2x"></i></a>
-                <a href="https://twitter.com/act_blog"><i class="fab fa-twitter fa-2x"></i></a>
-                <a href="https://www.act-blog.site/"><i class="fas fa-blog fa-2x"></i></a>
+                <a href="https://z-p15.www.instagram.com/act._.web/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+                <a href="https://twitter.com/act_blog" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
+                <a href="https://www.act-blog.site/" target="_blank"><i class="fas fa-blog fa-2x"></i></a>
               </div>
           </div>
 
@@ -75,9 +75,9 @@
               </div>
               <div class="about-text">
                 <p class="name">仲島　流星　　Nakajima　Subaru</p>
-                <p><i class="fab fa-instagram fa-1.6x"></i>Insagram : <a href="https://z-p15.www.instagram.com/act._.web/">@act._.web</a><br>
-                <i class="fab fa-twitter fa-1.6x"></i>Twitter : <a href="https://twitter.com/act_blog">@act_blog</a><br>
-              <i class="fas fa-blog fa-1.6x"></i>blog : <a href="https://www.act-blog.site/"">act_blog</a></p>
+                <p><i class="fab fa-instagram fa-1.6x"></i>Insagram : <a href="https://z-p15.www.instagram.com/act._.web/" target="_blank">@subaru.__.17</a><br>
+                <i class="fab fa-twitter fa-1.6x"></i>Twitter : <a href="https://twitter.com/act_blog" target="_blank">@act_blog</a><br>
+              <i class="fas fa-blog fa-1.6x"></i>blog : <a href="https://www.act-blog.site/" target="_blank">act_blog</a></p>
 
                 <p class="main-text"> 2001年　岐阜生まれ岐阜育ちの20歳です。時間、場所に囚われない働き方を見つけるため、web制作について学び始めました。
                 現在はフリーランスとして、主に企業系のHPのトップページや、LPなどの制作を行っております。詳しくはskillsをご覧ください。</p>
@@ -123,12 +123,12 @@
         <p>過去の制作物をご覧ください。</p>
 
         <div class="work-contents">
-          <a href="netshop/index.html"><img src="images/netshop.png" alt="ネットショップ"></a>
-          <a href="actcafe/index.html"><img src="images/actcafe.png" alt="アクトカフェ"></a>
-          <a href="travelblog/index.html"><img src="images/travelblog.png" alt="旅行ブログ"></a>
-          <a href="corporate/index.html"><img src="images/corporate1.png" alt="コーポレートサイト"></a>
-          <!-- <a href="#"><img src="images/jeep-2.jpeg" alt=""></a>
-          <a href="#"><img src="images/jeep-14.jpeg" alt=""></a> -->
+          <a href="netshop/index.html" target="_blank"><img src="images/netshop.png" alt="ネットショップ"></a>
+          <a href="actcafe/index.html" target="_blank"><img src="images/actcafe.png" alt="アクトカフェ"></a>
+          <a href="travelblog/index.html" target="_blank"><img src="images/travelblog.png" alt="旅行ブログ"></a>
+          <a href="corporate/index.html" target="_blank"><img src="images/corporate1.png" alt="コーポレートサイト"></a>
+          <a href="the company/index.html" target="_blank"><img src="images/thecompany.png" alt="コーポレートサイト" /></a>
+          <a href="#works"><img id="space" src="images/thecompany.png" alt="" /></a>
         </div>
       </div>
     </div>
@@ -139,7 +139,7 @@
         <p>アウトドアについてブログを書いてますので、 <br> ご覧ください。</p>
 
         <div class="blog-menu">
-          <a href="https://www.act-blog.site/"><i class="fas fa-blog fa-5x"></i></a>
+          <a href="https://www.act-blog.site/" target="_blank"><i class="fas fa-blog fa-5x"></i></a>
         </div>
       </div>
     </div>
@@ -150,8 +150,8 @@
         <p>お問い合わせは各種SNSまでお願いします。</p>
 
         <div class="contact-menu">
-          <a href="https://z-p15.www.instagram.com/act._.web/"><i class="fab fa-instagram fa-5x"></i></a>
-          <a href="https://twitter.com/home"><i class="fab fa-twitter fa-5x"></i></a> 
+          <a href="https://z-p15.www.instagram.com/act._.web/" target="_blank"><i class="fab fa-instagram fa-5x"></i></a>
+          <a href="https://twitter.com/home" target="_blank"><i class="fab fa-twitter fa-5x"></i></a>
         </div>
       </div>
     </div>
